# Isaac-GR00T

./: .gitattributes  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
demo_data/robot_sim.PickNPlace/meta/: episodes.jsonl  modality.json  tasks.jsonl
getting_started/: 0_load_dataset.ipynb  2_finetuning.ipynb  3_new_embodiment_finetuning.ipynb  4_deeper_understanding.md  5_policy_deployment.md  LeRobot_compatible_data_schema.md
getting_started/examples/: README.md  eval_gr00t_so100.py
gr00t/data/: dataset.py  embodiment_tags.py
gr00t/data/transform/: state_action.py
gr00t/eval/: robot.py  service.py
gr00t/experiment/: data_config.py  runner.py  trainer.py
gr00t/model/: __init__.py  gr00t_n1.py  policy.py  transforms.py
gr00t/model/action_head/: cross_attention_dit.py  flow_matching_action_head.py
gr00t/model/backbone/: eagle_backbone.py
gr00t/model/backbone/eagle2_hg_model/: added_tokens.json  config.json  configuration_eagle_chat.py  conversation_repo.py  inference_eagle_repo.py  modeling_eagle_chat.py  special_tokens_map.json  tokenizer_config.json  vocab.json
gr00t/utils/: eval.py  peft.py  video.py
scripts/: eval_policy.py  gr00t_finetune.py  inference_service.py  load_dataset.py
